# bevy-jam-002

./: .gitignore  Cargo.toml  README.md  build-wasm.sh  index.html
assets/shaders/: beam_material.wgsl  enemy_material.wgsl
assets/sprites/: enemy.aseprite  player.aseprite  symbols.aseprite
src/: audio.rs  beams.rs  death_screen.rs  enemies.rs  main.rs  menu.rs  mouse.rs  player.rs  ui.rs
