[package]
name = "bevy-jam-2"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.8"
bevy-inspector-egui = "0.12.1"
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
